--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,11 @@
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
  
-    <title>React App</title>
+    <title>My personal portofolio</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <div id="root"></div>
 
   </body>
